modified few changes

--- a/index.html
+++ b/index.html
@@ -981,24 +981,14 @@
     </section>
 <!-- End Testimonials Section -->
 
-    <section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.html)">
-    	<div class="overlay"></div>
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-md-7 ftco-animate text-center">
-						<h2>I'm <span>Available</span> for freelancing</h2>
-						<p class="mb-0"><a href="mailto:muskanvk97@gmail.com" class="btn btn-primary py-3 px-5">Hire me</a></p>
-					</div>
-				</div>
-			</div>
-		</section>
+    
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <p> I can translate your ideas to reality. If you have opportunities for me, or have crazy product ideas to discuss, always feel free to reach me at <a href="mailto:muskanvk97@gmail.com">muskanvk97@gmail.com</a></p>
+            <p> I can translate your ideas to reality. If you have opportunities for me, or have crazy product ideas to discuss, always feel free to reach me at <a href="mailto:srivastavbudugutta95@gmail.com">srivastavbudugutta95@gmail.com</a></p>
           </div>  
         </div>
 
@@ -1009,7 +999,7 @@
           			<span class="icon-code"></span>
           		</div>
           		<div>
-	          		<h3 class="mb-4">Programming with C/C++ and Python</h3>
+	          		<h3 class="mb-4">Programming with Python, JAVA and R</h3>
 		          </div>
 	          </div>
           </div>
@@ -1021,7 +1011,7 @@
           		<div>
 	          		<h3 class="mb-4">Machine Learning</h3>
 	            </div>
-	          </div>
+	        </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box text-center p-4 shadow">
@@ -1029,21 +1019,21 @@
           			<span class="icon-laptop"></span>
           		</div>
           		<div>
-	          		<h3 class="mb-4">Web Development</h3>
+	          		<h3 class="mb-4">Data Scientist</h3>
 		          </div>
 	          </div>
           </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-          	<div class="align-self-stretch box text-center p-4 shadow">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-github"></span>
-          		</div>
-          		<div>
-	          		<h3 class="mb-4">Git & Github</h3>
-	            </div>
-	          </div>
-          </div>
-        </div>
+		  <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+			<div class="align-self-stretch box text-center p-4 shadow">
+				<div class="icon d-flex align-items-center justify-content-center">
+					<span class="icon-bar-chart"></span>
+				</div>
+				<div>
+					<h3 class="mb-4">Data Analyst</h3>
+				</div>
+			</div>
+		</div>
+          
     </section>
 		
 
