--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 		    					<span class="date">May 2023- May 2024</span>
 		    					<h2>Data Intern</h2>
 		    					<span class="position">Career Design Labs - Columbia University</span>
-		    					<p>Need to update the work</p>
+		    					<!-- <p>Need to update the work</p> -->
 		    				</div>
 	    				</div>
 						<!-- Tutored -->
