--- a/index.html
+++ b/index.html
@@ -988,7 +988,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <p> I can translate your ideas to reality. If you have opportunities for me, or have crazy product ideas to discuss, always feel free to reach me at <a href="mailto:srivastavbudugutta95@gmail.com">srivastavbudugutta95@gmail.com</a></p>
+            <p> I can translate your ideas to reality. If you have opportunities for me, or have crazy product ideas to discuss, always feel free to reach me at <a href="mailto:srivastavbudugutta95@gmail.com">srivastavbudugutta95@gmail.com or sb4788@columbia.edu</a></p>
           </div>  
         </div>
 
