--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,8 @@
 
             <p>
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> | Made with <i class="icon-heart color-danger" aria-hidden="true"></i> by Srivastav Budugutta 
-  </p>
+  			</p>
+			<p class="text-right" style="font-size: 11px;"> I would like to acknowledge Muskan for her assistance in developing the website.</p>
           </div>
         </div>
       </div>
