--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4" style="display: flex;justify-content: center;">About Me</h2>
-		            <p align="justify">Dedicated System software development lead/owner with nearly 5 years of industrial experience and an excellent
+		            <p align="justify">Dedicated System software development lead/owner with nearly <script>document.write(new Date().getFullYear() - 2018);</script> years of industrial experience and an excellent
 						reputation for resolving problems and improving customer satisfaction. Laudable track record of exceeding goals through effective task prioritization to improve efficiency and productivity, thereby enhancing the organizational
 						brand. Organized and dependable candidate successful at managing multiple priorities with a positive attitude. Willingness to take on addedresponsibilities to meet team goals.</p>
 		            <hr>
@@ -817,7 +817,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" onclick="showPopup('images/white_belt.png')" style="background-image: url(images/white_belt.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4" id="myImg5">
-	    					<h3><a href="https://www.linkedin.com/posts/srivastavbudugutta_product-assurance-and-security-white-belt-activity-6783226976204402688-og0h?utm_source=share&utm_medium=member_desktop">Product Assurance Security Belt (White)</a></h3>
+	    					<h3><a href="https://www.linkedin.com/posts/srivastavbudugutta_product-assurance-and-security-white-belt-activity-6783226976204402688-og0h?utm_source=share&utm_medium=member_desktop" target="_blank">Product Assurance Security Belt (White)</a></h3>
 	    					<span>Product Security Assurance Achievement</span>
 	    				</div>
     				</div>
@@ -988,7 +988,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <p> I can translate your ideas to reality. If you have opportunities for me, or have crazy product ideas to discuss, always feel free to reach me at <a href="mailto:srivastavbudugutta95@gmail.com">srivastavbudugutta95@gmail.com or sb4788@columbia.edu</a></p>
+            <p> Unlock the Power of Your Ideas! I possess the unique ability to seamlessly transform your visionary concepts into tangible reality. Whether you're seeking exciting opportunities or eager to explore groundbreaking product ideas, I warmly welcome you to connect with me at<br> <a href="mailto:srivastavbudugutta95@gmail.com">srivastavbudugutta95@gmail.com </a> or <a href="mailto:sb4788@columbia.edu">sb4788@columbia.edu</a></p>
           </div>  
         </div>
 
@@ -1047,7 +1047,7 @@
             <p>
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> | Made with <i class="icon-heart color-danger" aria-hidden="true"></i> by Srivastav Budugutta 
   			</p>
-			<!-- <p class="text-right" style="font-size: 11px;"> I would like to acknowledge Muskan for her assistance in developing the website.</p> -->
+			
           </div>
         </div>
       </div>
