--- a/index.html
+++ b/index.html
@@ -754,8 +754,8 @@ function isElementInViewport(element) {
     		<div class="row justify-content-center py-5 mt-5">
           <div class="sec-title text-center">
           	<!-- <h1 class="big big-2">Research and Publications</h1> -->
-            <h2 class="mb-4">Research and Publications</h2>
-            <p> Exploring Knowledge: Unveiling My Research and Publications.</p>
+            <h2 class="mb-4" style="text-align: center;">Research and Publications</h2>
+            <p style="text-align: center;"> Exploring Knowledge: Unveiling My Research and Publications.</p>
           </div>
         </div>
     		<div class="row">
