--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ content: none;
                                       </a>
                                     </li>
                                     <li class="ftco-animate" style="margin-right: 10px;">
-                                      <a href="https://github.com/srisbudugut9" target="_blank">
+                                      <a href="https://github.com/srivastavbudugutta" target="_blank">
                                         <span class="fab fa-github fa-3x fancy-icon"></span>
                                       </a>
                                     </li>
@@ -1471,7 +1471,7 @@ function isElementInViewport(element) {
                                         </a>
                                       </li>
                                       <li class="ftco-animate" style="margin-right: 10px;">
-                                        <a href="https://github.com/srisbudugut9" target="_blank">
+                                        <a href="https://github.com/srivastavbudugutta" target="_blank">
                                           <span class="fab fa-github fa-3x fancy-icon"></span>
                                         </a>
                                       </li>
