--- a/index.html
+++ b/index.html
@@ -292,15 +292,15 @@ content: none;
                             
                         </div>
                         <div class="text wow slideInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
-                            <p>Experienced software development lead/owner with nearly <script>document.write(new Date().getFullYear() - 2018);</script> 
-                                years of Industrial Experience with a strong reputation for problem-solving and 
-                                enhancing customer satisfaction. Proven track record of surpassing goals by prioritizing tasks 
-                                effectively to boost efficiency and productivity, 
-                                thereby strengthening the organizational brand. Demonstrates exceptional 
-                                organization and dependability while managing multiple priorities with a positive attitude. 
-                                Possesses a versatile skill set and the willingness to take on additional responsibilities 
-                                to meet team goals. Seeking future opportunities in Product management, 
-                                data scientist or software development to expand expertise and contribute to diverse fields.</p>
+                            <p style="text-align: justify;">Experienced software development lead/owner with nearly <script>document.write(new Date().getFullYear() - 2018);</script> 
+								 years of Industrial Experience and a veteran in the field of Product Management, Data Science, and 
+								 Software Development. I have built a strong reputation for problem-solving and
+								  enhancing customer satisfaction throughout my career. With a proven track record
+								   of surpassing goals, I prioritize tasks effectively to boost efficiency and productivity, 
+								   thereby strengthening the organizational brand. I demonstrate exceptional organization and 
+								   dependability while managing multiple priorities with a positive attitude. Possessing a versatile 
+								   skill set, I am willing to take on additional responsibilities to meet team goals and contribute 
+								   to diverse fields.</p>
                                 <!-- <br> -->
                                 <style>
                                     /* Custom styles for the icons */
@@ -753,7 +753,7 @@ function isElementInViewport(element) {
     	<div class="container-fluid px-md-5">
     		<div class="row justify-content-center py-5 mt-5">
           <div class="sec-title text-center">
-          	<!-- <h1 class="big big-2">Research and Publications</h1> -->
+          	
             <h2 class="mb-4" style="text-align: center;">Research and Publications</h2>
             <p style="text-align: center;"> Exploring Knowledge: Unveiling My Research and Publications.</p>
           </div>
