--- a/index.html
+++ b/index.html
@@ -1345,8 +1345,9 @@ function isElementInViewport(element) {
 
 
 <!-- ======= Testimonials Section ======= -->
+
     
-<section class="testimonial5 text-center" id="testimonial" style="background-image: url(assets/images/testimonial_bg.jpg);">
+<section class="project-section" id="testimonial" style="background-image: url(assets/images/testimonial_bg.jpg);">
     <div class="container">
 
         <div class="heading white-heading">
