--- a/index.html
+++ b/index.html
@@ -1095,9 +1095,9 @@ function isElementInViewport(element) {
                         </div>
                         <div class="lower-content">
 
-                            <h3><a href="https://github.com/srivastavbudugutta/marketing_analytics" target="_blank" style="text-align: center;">Financial Analytics Solution for Software as Service (Saas) company</a></h3>
+                            <h3><a href="https://github.com/srivastavbudugutta/marketing_analytics" target="_blank" style="text-align: center;">Marketing Analytics project for grocery delivery company on customer base.</a></h3>
                             <p style="text-align: justify;">conducted an in-depth analysis on grocery delivery company customer data to address key questions from the CFO regarding customer segments and customer acquisition.
-                                 Utilized a dataset to provide insights and strategic recommendations.<br><br></p><br><br><br><br><br>
+                                 Utilized a dataset to provide insights and strategic recommendations.<br><br></p><br><br><br><br>
                         </div>
                     </div>
                 </div>
