--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ function isElementInViewport(element) {
                                     <div>
                                         <h6 style="display: block;"> Cum.GPA : 3.92/4.0</h6>
                                         <br>
-                                        <span style="display: inline-flex;">Courses Undertaken:</span>
+                                        <span style="display: inline-flex;">Courses:</span>
                                             <li style="display: inline-flex; align-items: center; margin-right: 1rem;">&#8226; Supervised Learning</li>
                                             <li style="display: inline-flex; align-items: center; margin-right: 1rem;">&#8226; Unsupervised Learning</li>
                                             <li style="display: inline-flex; align-items: center; margin-right: 1rem;">&#8226; Story telling using data</li>
@@ -532,7 +532,7 @@ function isElementInViewport(element) {
                                 </div>
                                 <div >
                                     <span style="display: block;text-align: center;">(2023-2024)</span>
-                                    <h5 style="text-align: center; display: block;">Career Design Labs - Columbia University</h5>
+                                    <h5 style="text-align: center; display: block;">Career Design Lab - Columbia University</h5>
                                 </div>
                                 
                             
@@ -767,7 +767,7 @@ function isElementInViewport(element) {
 							</span>
 							<div class="desc research-publication-body">
 								<h3 class="mb-3 research-publication-title">Analytics For Good</h3>
-								<p class="research-publication-desc">Presented Poster on "Analytics for Good" at Career Design Labs as Part of Project Innovation Day</p>
+								<p class="research-publication-desc">Presented Poster on "Analytics for Good" at Career Design Lab as Part of Project Innovation Day</p>
 							</div>
 						</a>
 					</div>
