--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ function isElementInViewport(element) {
                                     <div>
                                         <h6 > Cum.GPA : 4.0/4.0</span> <span> | GMAT : 750/800 (98th Percentile)</span><span> | Rank : 6<sup>th</sup>/472</h6>
                                         <br><br>
-                                        <span style="display: block;">Main Courses Undertaken:
+                                        <span style="display: block;">Main Courses:
                                             <li style="display: inline-flex; align-items: center; margin-right: 1rem;">&#8226; Software Engineering</li>
                                             <li style="display: inline-flex; align-items: center; margin-right: 1rem;">&#8226; Advanced Java programming</li>
                                             <li style="display: inline-flex; align-items: center; margin-right: 1rem;">&#8226; C#</li>
