--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@ function isElementInViewport(element) {
                             
                                 <div class="card-footer_education">
                                     <div>
-                                        <h6 > Cum.GPA : 4.0/4.0</span> <span> | GMAT : 750/800 (98th Percentile)</span><span> | Rank : 6<sup>th</sup>/472</h6>
+                                        <h6 > Cum.GPA : 4.0/4.0</span> <span> | Rank : 6<sup>th</sup>/472</h6> | GMAT : 750/800 (98th Percentile)</span><span> 
                                         <br><br>
                                         <span style="display: block;">Main Courses:
                                             <li style="display: inline-flex; align-items: center; margin-right: 1rem;">&#8226; Software Engineering</li>
